--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>OVERLEASY</title>
   <link rel="stylesheet" href="css/ghq.css">
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/html2canvas.js"></script>
   <script type="text/javascript" src="js/canvas2image.js"></script>
+
+  <meta name="description" content="Com o overleasy você pode visualisar seu post, capa, foto de perfil entre outros.">
+    <link rel="canonical" href="https://gustavoquinalha.github.io/overleasy/">
+    <meta name="author" content="Gustavo Quinalha">
+    <meta name="robots" content="index">
+
+    <meta property="og:title" content="Overleasy" />
+    <meta property="fb:app_id" content="1154262757941899" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gustavoquinalha.github.io/overleasy/" />
+    <meta property="og:image" content="http://gustavoquinalha.github.io/images/overleasy2.jpg" />
+    <meta property="og:description" content="Com o overleasy você pode visualisar seu post, capa, foto de perfil entre outros." />
+    <meta property="og:site_name" content="Overleasy" />
+    <meta property="fb:admins" content="100002787447461" />
+
+    <meta itemprop="name" content="Overleasy">
+    <meta itemprop="description" content="Com o overleasy você pode visualisar seu post, capa, foto de perfil entre outros.">
+    <meta itemprop="image" content="http://gustavoquinalha.com/images/site-full.jpg">
+
 </head>
 
 <body>
@@ -492,13 +512,13 @@
             </div>
 
           </div>
-          <div class="xat">
+          <!--<div class="xat">
             <div class="xxat">
               <div class="xat-teste">
 
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </form>
