--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       <form id="form1" runat="server">
                         <div class="rel">
                           <div class="inpuu">
-                            <input type="file" id="imgInp" name="imgInp" class="aa" />
+                            <input type="file" id="imgInp" name="imgInp" class="aaa" />
                             <label for="imgInp"><img src="img/photo-camera.svg" width="15" class="pho" alt="" />
                             </label>
                           </div>
@@ -121,7 +121,7 @@
                 <form id="form2">
                   <div class="rel">
                     <div class="inpuu">
-                      <input type="file" id="imgInpp" name="imgInpp" class="aa" />
+                      <input type="file" id="imgInpp" name="imgInpp" class="aaa" />
                       <label for="imgInpp"><img src="img/photo-camera.svg" width="15" class="pho" alt="" />
                       </label>
                     </div>
@@ -468,7 +468,7 @@
                           <img id="blahfghijkl" class="pcc" src="" alt=" " />
                         </div>
                         <div class="aa">
-                          <h2>Overleasy</h2>
+                          <h2>Overleasya</h2>
                           <span>Ferramenta</span>
                         </div>
                       </div>
