--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="js/html2canvas.js"></script>
   <script type="text/javascript" src="js/canvas2image.js"></script>
 
-  <meta name="description" content="Com o overleasy você pode visualisar seu post, capa, foto de perfil entre outros.">
+  <meta name="description" content="Com o overleasy você pode visualisar seu posts, capas, fotos para perfil e muito mais.">
     <link rel="canonical" href="https://gustavoquinalha.github.io/overleasy/">
     <meta name="author" content="Gustavo Quinalha">
     <meta name="robots" content="index">
@@ -20,12 +20,12 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gustavoquinalha.github.io/overleasy/" />
     <meta property="og:image" content="http://gustavoquinalha.github.io/images/overleasy2.jpg" />
-    <meta property="og:description" content="Com o overleasy você pode visualisar seu post, capa, foto de perfil entre outros." />
+    <meta property="og:description" content="Com o overleasy você pode visualisar seu posts, capas, fotos para perfil e muito mais." />
     <meta property="og:site_name" content="Overleasy" />
     <meta property="fb:admins" content="100002787447461" />
 
     <meta itemprop="name" content="Overleasy">
-    <meta itemprop="description" content="Com o overleasy você pode visualisar seu post, capa, foto de perfil entre outros.">
+    <meta itemprop="description" content="Com o overleasy você pode visualisar seu posts, capas, fotos para perfil e muito mais.">
     <meta itemprop="image" content="http://gustavoquinalha.com/images/site-full.jpg">
 
 </head>
@@ -41,19 +41,19 @@
           <div class="pesquisao">
             <div class="po">
               <input type="text" name="name" value="" placeholder="Procure pessoas, coisas e locais">
-              <div class="pes">
-                <img src="img/search.svg" width="15" alt="" />
+              <div class="pes rel">
+                <img src="img/search.svg" width="15" alt="" class="pad"/>
               </div>
             </div>
           </div>
-          <div class="logoo rel">
+          <!--<div class="logoo rel">
             <div class="app">
               <img id="blahfghi" class="appl" src="" alt=" " />
             </div>
             <div class="lg">
               Overleasy
             </div>
-          </div>
+          </div>-->
           <div class="logoo">
             <div class="lg">
               Página inicial
