--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                           <img id="blahfghijkl" class="pcc" src="" alt=" " />
                         </div>
                         <div class="aa">
-                          <h2>Overleasya</h2>
+                          <h2>Overleasy</h2>
                           <span>Ferramenta</span>
                         </div>
                       </div>
@@ -523,8 +523,10 @@
       </div>
     </form>
     <div class="rodape">
+
+      <img src="img/ov.svg" alt="Overleasy"  width="200" />
       <p>
-        Create by @gustavoquinalha
+        Create by <a href="https://gustavoquinalha.github.io/">Gustavo Quinalha</a>
       </p>
     </div>
   </div>
