--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                         <li>Publicacoes</li>
                       </ul>
                       <div class="btnn">
+
                         <button type="button" id="btnSave" name="button" class="criar">SALVAR OVERLEASY</button>
+                        <span>Depois de adicionar todas as imagens clique aqui e salve em PNG.</span>
                       </div>
                     </div>
                   </div>
