--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="rel">
             <div class="flgg">
                 <div class="content-l">
-                  <div class="cem">
+                  <div class="cem fl">
                     <div class="foto-perfil">
                       <form id="form1" runat="server">
                         <div class="rel">
@@ -97,7 +97,7 @@
                     <div class="dados-pagina">
                       <h1>Overleasy</h1>
                       <h2>@Overleasy</h2>
-                      <ul class="menu fl">
+                      <ul class="menu ">
                         <li><span>Página Inicial</span>
                         </li>
                         <li>Sobre</li>
@@ -106,16 +106,20 @@
                         <li>Eventos</li>
                         <li>Publicacoes</li>
                       </ul>
-                      <div class="btnn">
 
-                        <button type="button" id="btnSave" name="button" class="criar">SALVAR OVERLEASY</button>
-                        <span>Depois de adicionar todas as imagens clique aqui e salve em PNG.</span>
-                      </div>
                     </div>
                   </div>
+                  <div class="btnn">
+
+                    <button type="button" id="btnSave" name="button" class="criar">SALVAR OVERLEASY</button>
+                    <span>Depois de adicionar todas as imagens clique aqui e salve em PNG.</span>
+                  </div>
                 </div>
+
             </div>
+
           </div>
+
 
           <div class="content-right">
             <div class="oito">
@@ -134,7 +138,30 @@
               <div class="info">
                 <div class="fix">
                   <div class="flex-b">
-                    <div class="item">
+                    <div class="item ewa">
+                      <div class="respp">
+                        <div class="rel">
+                          <div class="ffv">
+                            <div class="foto-perfil2">
+
+                            </div>
+                          </div>
+                          <div class="dados-pagina2">
+                            <h4>Overleasy</h4>
+                            <h5>@Overleasy</h5>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="buttonsr oaa">
+                        <ul>
+                          <li>
+                            <button class="cad" type="button" name="button">Cadastre-se</button>
+                          </li>
+                          <li>
+                            <button class="btnc" type="button" name="button"><img src="img/messenger.svg" class="btna" alt="" />Enviar Mensagem</button>
+                          </li>
+                        </ul>
+                      </div>
                       <div class="buttons">
                         <ul>
                           <li>
@@ -151,9 +178,10 @@
                           </li>
                         </ul>
                       </div>
+
                     </div>
-                    <div class="item">
-                      <div class="buttonsr">
+                    <div class="item eaw">
+                      <div class="buttonsr oaaa">
                         <ul>
                           <li>
                             <button class="cad" type="button" name="button">Cadastre-se</button>
