--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <div class="btnn">
 
                     <button type="button" id="btnSave" name="button" class="criar">SALVAR OVERLEASY</button>
-                    <span>Depois de adicionar todas as imagens clique aqui e salve em PNG.</span>
+                    <span class="oaaa">Depois de adicionar todas as imagens clique aqui e salve em PNG.</span>
                   </div>
                 </div>
 
