--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <div class="rel">
                           <div class="ffv">
                             <div class="foto-perfil2">
-
+                                <img id="fpdo" class="foto-perfil2" src="" alt=" " />
                             </div>
                           </div>
                           <div class="dados-pagina2">
@@ -593,6 +593,8 @@
           $('#blahfghijk').attr('src', e.target.result);
           $('#blahfghijkl').attr('src', e.target.result);
           $('#blahfghijkf').attr('src', e.target.result);
+          $('#fpdo').attr('src', e.target.result);
+
         }
 
         reader.readAsDataURL(input.files[0]);
