--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
           <div class="logoo">
             <img src="img/logo.svg" width="20" alt="" />
           </div>
-          <div class="pesquisao">
+          <div class="pesquisao aaa">
             <div class="po">
               <div class="ppe">
                 <input type="text" name="name" value="" placeholder="Procure pessoas, coisas e locais">
               </div>
               <div class="pes rel">
-                <img src="img/search.svg" width="15" alt="" class="pad"/>
+                <img src="img/search.svg" width="12" alt="" class="pad"/>
               </div>
             </div>
           </div>
