--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="logoo">
             <img src="img/logo.svg" width="20" alt="" />
           </div>
-          <div class="pesquisao aaa">
+          <div class="pesquisao oaaa">
             <div class="po">
               <div class="ppe">
                 <input type="text" name="name" value="" placeholder="Procure pessoas, coisas e locais">
