--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       <div class="top fixed">
         <div class="content-menu flex">
           <div class="logoo">
-            <img src="img/logo.svg" width="20" alt="" />
+            <img src="img/logo.svg" width="20" alt="" class="hk" />
           </div>
-          <div class="pesquisao oaaa">
+          <div class="pesquisao">
             <div class="po">
               <div class="ppe">
                 <input type="text" name="name" value="" placeholder="Procure pessoas, coisas e locais">
@@ -69,7 +69,7 @@
               Overleasy
             </div>
           </div>-->
-          <div class="logoo">
+          <div class="logoo fdg">
             <div class="lg">
               Página inicial
             </div>
