--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <meta itemprop="name" content="Overleasy">
     <meta itemprop="description" content="Com o overleasy você pode visualisar seu posts, capas, fotos para perfil e muito mais.">
-    <meta itemprop="image" content="http://gustavoquinalha.com/images/site-full.jpg">
+    <meta itemprop="image" content="http://gustavoquinalha.github.io/images/overleasy2.jpg">
 
 </head>
 
