--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                           </div>
                           <div class="vis">
                             <p>
-                              <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</span> <a href="#">Ver mais</a>
+                              <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</span> <a href="javascript:void(0);">Ver mais</a>
                             </p>
                           </div>
                         </div>
