--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <button class="btnc" type="button" name="button"><img src="img/reply.svg" class="btna" alt="" />Compartilhar</button>
                           </li>
                           <li>
-                            <button class="btnc" type="button" name="button"><img src="img/more.svg" class="btna" alt="" />Mais</button>
+                            <button class="btnc" type="button" name="button"><img src="img/more.svg" class="btna oaaa" alt="" />Mais</button>
                           </li>
                         </ul>
                       </div>
@@ -508,7 +508,7 @@
                           </div>
                         </div>
                         <div class="btts">
-                          <a href="#">Curtir</a> <a href="#">Comentar</a>
+                          <a href="javascript:void(0);">Curtir</a> <a href="javascript:void(0);">Comentar</a>
                         </div>
                       </div>
                     </div>
