--- a/index.html
+++ b/index.html
@@ -139,13 +139,14 @@
             <div class="oito">
               <div class="capa">
                 <form id="form2">
+                    <img id="capah" class="ii cropcapa" src="" alt=" " />
                   <div class="rel">
                     <div class="inpuu">
                       <input type="file" id="imgInpp" name="imgInpp" class="aaa" />
                       <label for="imgInpp"><img src="img/photo-camera.svg" width="15" class="pho" alt="" />
                       </label>
                     </div>
-                    <img id="capah" class="fFotoCapa" src="" alt=" " />
+
                   </div>
                 </form>
               </div>
