--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="oito">
               <div class="capa">
                 <form id="form2">
-                    <img id="capah" class="ii cropcapa" src="" alt=" " />
+                    <img id="capah" class="ii cropcapa" src="http://marketing-assets.avvo.com/uploads/sites/3/2015/04/420-State-of-the-Union.jpg" alt=" " />
                   <div class="rel">
                     <div class="inpuu">
                       <input type="file" id="imgInpp" name="imgInpp" class="aaa" />
