--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -137,23 +138,12 @@
           <div class="content-right">
             <div class="oito">
               <div class="capa">
-                <div class="rel">
-                  <div class="inpuu">
-                    <input id="fileUpload" multiple="multiple" type="file" name="fileUpload" class="aaa"/>
-                    <label for="fileUpload">
-                      <img src="img/photo-camera.svg" width="15" class="pho" alt="" />
-                    </label>
-                  </div>
-                  <div id="image-holder">
-                  </div>
-                </div>
-
-                <!--<form id="form2">
+                <form id="form2">
 
                     <div class="imageDiv">
                       <img id="capah" class="ii cropcapa" src="" alt=" " />
                     </div>
-                    <div class="rel">
+                  <div class="rel">
                     <div class="inpuu">
                       <input type="file" id="imgInpp" name="imgInpp" class="aaa" />
                       <label for="imgInpp"><img src="img/photo-camera.svg" width="15" class="pho" alt="" />
@@ -161,7 +151,7 @@
                     </div>
 
                   </div>
-                </form>-->
+                </form>
               </div>
               <div class="info">
                 <div class="fix">
@@ -623,6 +613,10 @@
 
       </p>
     </div>
+      <div id="wrapper" style="margin-top: 20px;">
+
+        <div id="image-holder"></div>
+      </div>
   </div>
   <script type="text/javascript">
   $("#fecha").click(function(){
