--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
             //var data = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");
             //window.location.href = data;
             window.location = canvas.toDataURL('image/png', '_blank');
-            //document.body.removeChild(canvas);
+            document.body.removeChild(canvas);
           }
         });
       });
