--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>OVERLEASY</title>
-  <link rel="stylesheet" href="css/ghq.css">
+  <title>OVERLEASY Facebook</title>
+  <link rel="stylesheet" href="css/face.css">
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/html2canvas.js"></script>
   <script type="text/javascript" src="js/canvas2image.js"></script>
