--- a/insta.html
+++ b/insta.html
@@ -89,6 +89,21 @@
 
             </div>
           </div>
+          <div class="foto">
+            <div class="foto-insta">
+
+            </div>
+          </div>
+          <div class="foto">
+            <div class="foto-insta">
+
+            </div>
+          </div>
+          <div class="foto">
+            <div class="foto-insta">
+
+            </div>
+          </div>
         </div>
         <div class="botao">
           <input type="button" name="name" value="Carregar mais">
