--- a/insta.html
+++ b/insta.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/canvas2image.js"></script>
   </head>
   <body>
-    <div class="relaviso" id="relaviso">
+    <!--<div class="relaviso" id="relaviso">
       <div class="fixaviso avi">
         <div class="ll">
           <div class="fix">
@@ -23,6 +23,11 @@
 
         </div>
       </div>
+      </div>-->
+    <div class="rel">
+      <div class="salvar s">
+        <button type="button" id="saveInsta" name="button" class="criar">SALVAR OVERLEASY</button>
+      </div>
     </div>
     <div class="instagram" id="instagram">
       <div class="menu-insta">
@@ -34,19 +39,17 @@
             <input type="text" name="name" value="" placeholder="Busca" class="busca-input">
           </div>
           <div class="test icones">
-              <img src="img/heart.svg" width="20" alt="" />
-              <img src="img/compass.svg" width="20" alt="" />
-              <img src="img/user-insta.svg" width="20" alt="" />
+            <img src="img/heart.svg" width="20" alt="" />
+            <img src="img/compass.svg" width="20" alt="" />
+            <img src="img/user-insta.svg" width="20" alt="" />
           </div>
         </div>
       </div>
-
       <div class="conteudo-insta">
         <div class="profile">
           <div class="profile-flex">
             <div class="foto-profile">
               <div class="foto-borda">
-
               </div>
             </div>
             <div class="texto-profile">
@@ -63,59 +66,48 @@
                   <li><span>1.200</span> seguidores</li>
                   <li>seguindo <span>1.200</span></li>
                 </ul>
+              </div>
+              <div class="sobre">
+                <textarea name="name" rows="7"class="text-sobre">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</textarea>
+              </div>
             </div>
-            <div class="sobre">
-              <textarea name="name" rows="7"class="text-sobre">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</textarea>
-            </div>
-            </div>
-
-            </div>
-
+          </div>
         </div>
         <div class="tamanho flex">
           <div class="foto">
             <div class="foto-insta">
-
             </div>
           </div>
           <div class="foto">
             <div class="foto-insta">
-
             </div>
           </div>
           <div class="foto">
             <div class="foto-insta">
-
             </div>
           </div>
           <div class="foto">
             <div class="foto-insta">
-
             </div>
           </div>
           <div class="foto">
             <div class="foto-insta">
-
             </div>
           </div>
           <div class="foto">
             <div class="foto-insta">
-
             </div>
           </div>
           <div class="foto">
             <div class="foto-insta">
-
             </div>
           </div>
           <div class="foto">
             <div class="foto-insta">
-
             </div>
           </div>
           <div class="foto">
             <div class="foto-insta">
-
             </div>
           </div>
         </div>
@@ -140,24 +132,18 @@
           <div class="rodape-direito">
             © 2017 INSTAGRAM
           </div>
-
         </div>
       </footer>
-      <div class="img-out">
-
-      </div>
-
     </div>
     <script type="text/javascript">
-    $("#fecha").click(function(){
-      $("#relaviso").toggle();
+      $("#fecha").click(function(){
+        $("#relaviso").toggle();
 
-    });
+      });
     </script>
     <script type="text/javascript">
       $(function() {
         $("#saveInsta").click(function() {
-          alert ("fsdf ");
           html2canvas($("#instagram"), {
             onrendered: function(canvas) {
               theCanvas = canvas;
