--- a/index.html
+++ b/index.html
@@ -31,17 +31,25 @@
 
 <body>
   <div class="relaviso" id="relaviso">
+
     <div class="fixaviso avi">
       <div class="ll">
+
         <div class="fix">
-          Novas atualizaçõessss! Agora você pode editar os textos e salvar seu overleasy, experimente!
+
+            <div class="whi">
+                Novas atualizaçõessss! Clique aqui e confira o overleasy do <a href="insta.html" class="avvv">instagram</a>
+            </div>
+
         </div>
       </div>
+
       <div class="lr">
         <button type="button" name="fecha" class="alertf" id="fecha"><img src="img/close-alert.svg" width="20" alt="" /></button>
 
       </div>
     </div>
+
   </div>
   <div class="widget" id="widget">
     <div class="rela">
