--- a/insta.html
+++ b/insta.html
@@ -26,7 +26,7 @@
       </div>
     <div class="rel">
       <div class="salvar s">
-        <button type="button" id="saveInsta" name="button" class="criar">SALVAR OVERLEASY</button>
+        <button type="button" id="saveInsta" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> SALVAR OVERLEASY</button>
       </div>
     </div>
     <div class="instagram" id="instagram">
